# py_notifykit_sms

./: README.md  pyproject.toml  requirements.txt
notifykit/providers/: africastalking.py
py_notifykit_sms/: core.py  exceptions.py
py_notifykit_sms/providers/: africastalking.py  smsleopard.py
