[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py_notifykit_sms"
version = "0.1.0"
description = "Send SMS via multiple providers using one clean Python interface."
authors = [{ name = "Lumbert Omwaga" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "africastalking>=2.0.1"
]
